# agent-arena

./: .env.example  .gitignore  README-cn.md  README.md  agentlane.yaml.example  arena.yaml.example  experiment.yaml.example  pyproject.toml  start.sh
backend/: api.py  artifact_docx.py  artifact_pptx.py  artifact_preview.py  artifact_worker.py  artifact_xlsx.py  config.py  db.py  env_attempt_server.py  env_loader.py  evaluator.py  main.py  model_providers.py  models.py  run_dispatch.py  runner.py  runtime_state.py  selfcheck.py
docs/: README.md  agents.md  architecture.md  env-prerequisites.md  environments.md  experiments.md
lane/: __init__.py  env_api.py
scripts/: aggregate_experiment.py  lint_env.py  run_experiment.py
tests/: _wire_projection.py  conftest.py  test_acp_adapter.py  test_acp_client.py  test_acp_registry.py  test_agent_availability.py  test_agent_catalog_api.py  test_agent_compatibility.py  test_agent_driver_contract.py  test_agent_error_taxonomy.py  test_agent_launch_plan.py  test_agent_local_cli_runtime.py  test_agent_manifest.py  test_agent_manifest_api.py  test_agent_mcp_dialects.py  test_agent_parser_contract.py  test_agent_registry.py  test_agent_spec.py  test_api.py  test_artifact_preview.py  test_c41c_cc_turn_correlation.py  test_c41x_codex_turn_correlation.py  test_c42c_cc_subagent_compaction.py  test_c51_conversation_api.py  test_c53_compaction_benchmark_env.py  test_claude_code_codex_mcp_specs.py  test_claude_code_multiturn_processes.py  test_codex_multiturn_normalizer.py  test_compare_modes.py  test_config.py  test_conversation_plan.py  (+51 more)
(+337 files in other folders)
